GA游戏列表添加免费试玩入口

--- a/app/src/main/res/layout/fragment_lottery.xml
+++ b/app/src/main/res/layout/fragment_lottery.xml
@@ -100,6 +100,21 @@
                 android:gravity="center"
                 android:numColumns="2"
                 android:visibility="gone"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <include android:id="@+id/qwc" layout="@layout/item_fragment_home_gridview"/>
+                <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
+            </LinearLayout>
+            <com.goldenasia.lottery.component.ScrollGridView
+                android:id="@+id/qwc_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_dark_border"
+                android:gravity="center"
+                android:numColumns="2"
+                android:visibility="gone"/>
             <com.goldenasia.lottery.component.ScrollGridView
                 android:id="@+id/others_gridview"
                 android:layout_width="match_parent"
