彩票列表界面和下级订单界面修改

--- a/app/src/main/res/layout/fragment_member_order.xml
+++ b/app/src/main/res/layout/fragment_member_order.xml
@@ -26,7 +26,7 @@
         <RadioButton
             android:id="@+id/timeRadioButton"
             style="@style/historyRadioButton"
-            android:text="游戏时间"/>
+            android:text="今天"/>
     </RadioGroup>
 
     <LinearLayout
@@ -105,7 +105,7 @@
 
     <Button android:id="@+id/query"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
             android:background="@drawable/notidialog_rightbtn_selector"
