--- a/app/src/main/res/layout/fragment_lottery.xml
+++ b/app/src/main/res/layout/fragment_lottery.xml
@@ -105,10 +105,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <include android:id="@+id/qwc" layout="@layout/item_fragment_home_gridview"/>
-                <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"/>
+                <include android:id="@+id/pk10" layout="@layout/item_fragment_home_gridview"/>
             </LinearLayout>
             <com.goldenasia.lottery.component.ScrollGridView
                 android:id="@+id/qwc_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_dark_border"
+                android:gravity="center"
+                android:numColumns="2"
+                android:visibility="gone"/>
+            <com.goldenasia.lottery.component.ScrollGridView
+                android:id="@+id/pk10_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_dark_border"
