--- a/app/src/main/res/layout/fragment_sb_web_view.xml
+++ b/app/src/main/res/layout/fragment_sb_web_view.xml
@@ -8,11 +8,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible"/>
+    <LinearLayout
+        android:id="@+id/loading_layout_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="加载中..."
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+
         android:orientation="vertical">
         <ImageView
             android:layout_width="wrap_content"
@@ -20,6 +40,7 @@
             android:src="@drawable/sb_bg"/>
 
         <ImageView
+            android:id="@+id/sb_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
