--- a/app/src/main/res/layout/custom_tooltip.xml
+++ b/app/src/main/res/layout/custom_tooltip.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.cpiz.android.bubbleview.BubbleLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/popup_bubble"
-    android:layout_width="180dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:textColor="@android:color/white"
@@ -34,7 +34,17 @@
                 android:textColor="@drawable/general_button_text_color"
                 android:button="@null"
                 android:checked="true"
-                android:text="元" />
+                android:text="2元" />
+
+            <RadioButton
+                android:id="@+id/lucremode_oneyuan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/background_round_button_select"
+                android:textColor="@drawable/general_button_text_color"
+                android:button="@null"
+                android:text="1元" />
 
             <RadioButton
                 android:id="@+id/lucremode_jiao"
