--- a/app/src/main/res/layout/shroud_view.xml
+++ b/app/src/main/res/layout/shroud_view.xml
@@ -63,7 +63,7 @@
                   android:layout_height="30dp"
                   android:background="@drawable/background_border"
                   android:gravity="center"
-                  android:text="元"
+                  android:text="2元"
                   android:textColor="@color/app_main_support"/>
 
         <ImageView
