--- a/app/src/main/res/drawable/background_round_button.xml
+++ b/app/src/main/res/drawable/background_round_button.xml
@@ -8,11 +8,15 @@
     <stroke
         android:width="1dp"
         android:color="@color/app_main"/>
-    <corners android:radius="360dip" />
-
-    <padding
-        android:bottom="8dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:top="8dp" />
+    <corners android:bottomLeftRadius="2dp"
+        android:bottomRightRadius="2dp"
+        android:topLeftRadius="2dp"
+        android:topRightRadius="2dp" />
+    <size android:height="36dp"
+        android:width="36dp"/>
+    <!--<padding-->
+        <!--android:bottom="8dp"-->
+        <!--android:left="10dp"-->
+        <!--android:right="10dp"-->
+        <!--android:top="8dp" />-->
 </shape>
