--- a/app/src/main/res/drawable/background_round_button_s.xml
+++ b/app/src/main/res/drawable/background_round_button_s.xml
@@ -7,13 +7,17 @@
 
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="360dip" />
-
+    <corners android:bottomLeftRadius="2dp"
+        android:bottomRightRadius="2dp"
+        android:topLeftRadius="2dp"
+        android:topRightRadius="2dp" />
+    <size android:height="36dp"
+        android:width="36dp"/>
     <!-- padding: Button 里面的文字与Button边界的间隔 -->
-    <padding
-        android:bottom="8dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:top="8dp" />
+    <!--<padding-->
+        <!--android:bottom="8dp"-->
+        <!--android:left="8dp"-->
+        <!--android:right="8dp"-->
+        <!--android:top="8dp" />-->
 
 </shape>
