--- a/app/src/main/res/layout/custom_tooltip.xml
+++ b/app/src/main/res/layout/custom_tooltip.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
+                android:gravity="center"
                 android:background="@drawable/background_round_button_select"
                 android:textColor="@drawable/general_button_text_color"
                 android:button="@null"
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
+                android:gravity="center"
                 android:background="@drawable/background_round_button_select"
                 android:textColor="@drawable/general_button_text_color"
                 android:button="@null"
@@ -51,29 +53,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
+                android:gravity="center"
                 android:background="@drawable/background_round_button_select"
                 android:button="@null"
                 android:textColor="@drawable/general_button_text_color"
-                android:text="角" />
+                android:text="2角" />
 
             <RadioButton
                 android:id="@+id/lucremode_fen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
+                android:gravity="center"
                 android:background="@drawable/background_round_button_select"
                 android:textColor="@drawable/general_button_text_color"
                 android:button="@null"
-                android:text="分" />
+                android:text="2分" />
 
             <RadioButton
                 android:id="@+id/lucremode_li"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:background="@drawable/background_round_button_select"
                 android:textColor="@drawable/general_button_text_color"
                 android:button="@null"
-                android:text="厘" />
+                android:text="2厘" />
 
         </RadioGroup>
     </LinearLayout>
