--- a/app/src/main/res/layout/shroud_mmc_view.xml
+++ b/app/src/main/res/layout/shroud_mmc_view.xml
@@ -83,7 +83,7 @@
                 android:background="@drawable/background_mmc_round_button_select"
                 android:button="@null"
                 android:gravity="center"
-                android:text="角"
+                android:text="2角"
                 android:textColor="@drawable/mmc_currency_selector" />
 
             <RadioButton
@@ -94,7 +94,7 @@
                 android:button="@null"
                 android:layout_marginRight="4dp"
                 android:gravity="center"
-                android:text="分"
+                android:text="2分"
                 android:textColor="@drawable/mmc_currency_selector" />
 
             <RadioButton
@@ -104,7 +104,7 @@
                 android:background="@drawable/background_mmc_round_button_select"
                 android:button="@null"
                 android:gravity="center"
-                android:text="厘"
+                android:text="2厘"
                 android:textColor="@drawable/mmc_currency_selector"/>
 
         </RadioGroup>
